--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -12,13 +12,9 @@ jobs:
     steps:
     - name: Check-out devops repository
       uses: actions/checkout@v2
-      with:
-        repository: jcdan3/devops
-        token: ${{ secrets.GITHUB_TOKEN }}
-        path: ${{ env.DEVOPS_DIR }}
 
     - name: Hello World
-      run: python ${{ env.DEVOPS_DIR }}/hello_world.py
+      run: python hello_world.py
       shell: sh
 
 
